<resources>
    <string name="app_name">Bondoman</string>
    <string name="loginButton">Login</string>
    <string name="hint_input_email_address">Input Email Address</string>
    <string name="hint_input_password">Input Password</string>
    <string name="logout">Logout</string>
    <string name="transaction_name">Transaction Name</string>
    <string name="randomize">Randomize</string>
    <string name="transaction_button_description">Transaksi</string>
    <string name="graph_button_description">Grafik</string>
    <string name="setting_button_description">Pengaturan</string>
    <string name="scan_button_description">Pindai</string>
    <string name="rescan_button_description">Pindai Ulang</string>
    <string name="image_button_description">Galeri</string>
    <string name="confirm_button_description">Konfirmasi</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="category_array">
        <item>Pemasukan</item>
        <item>Pengeluaran</item>
    </string-array>
    <string name="back_button_description">Kembali</string>
    <string name="selected_image_description">Gambar Terpilih</string>
    <string name="scan_fragment_title">Scan Nota</string>


</resources>