<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/transaction_fragment">

    <fragment
        android:id="@+id/transaction_fragment"
        android:name="com.example.bondoman.TransactionFragment"
        android:label="@string/transaction_button_description"
        tools:layout="@layout/fragment_transaksi">
        <action android:id="@+id/action_transaction_to_graph" app:destination="@id/graph_fragment"/>
        <action android:id="@+id/action_transaction_to_setting" app:destination="@id/setting_fragment"/>
    </fragment>
    <fragment android:id="@+id/graph_fragment"
        android:label="@string/graph_button_description"
        tools:layout="@layout/fragment_grafik"
        android:name="com.example.bondoman.GraphFragment">
        <action android:id="@+id/action_graph_to_transaction" app:destination="@id/transaction_fragment"/>
        <action android:id="@+id/action_graph_to_setting" app:destination="@id/setting_fragment"/>
    </fragment>
    <fragment android:id="@+id/setting_fragment"
        android:label="@string/setting_button_description"
        tools:layout="@layout/fragment_setting"
        android:name="com.example.bondoman.SettingFragment">
        <action android:id="@+id/action_setting_to_graph" app:destination="@id/graph_fragment"/>
        <action android:id="@+id/action_setting_to_transaction" app:destination="@id/transaction_fragment"/>
    </fragment>
</navigation>