<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/login_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/login" />


    <RelativeLayout
        android:id="@+id/conn_lost"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/login_page"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">


        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/rainbow_off" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/image"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="Connection Lost"
            android:textAppearance="?attr/textAppearanceHeadline6" />

        <TextView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="Please check your internet connection and try again."
            android:textAppearance="?attr/textAppearanceBody2" />



    </RelativeLayout>

    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="300dp"
        android:layout_height="51dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_page"
        android:layout_marginTop="80dp"
        app:layout_constraintBottom_toTopOf="@+id/password"
        android:hint="@string/hint_input_email_address"
        android:autofillHints="" />


    <EditText
        android:id="@+id/password"
        android:layout_width="300dp"
        android:layout_height="51dp"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAddress"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        android:hint="@string/hint_input_password"
        android:autofillHints=""
        />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:text="@string/loginButton"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="92dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
